# sex

./: .travis.yml  README.md  configure.ac
snap/: snapcraft.yaml
src/: Makefile.am  hash.h  memrchr.c  memrchr.h  nifty.h  sex.c  sex.yuck  xquo.c  xquo.h
test/: EURUSD.c1  EURUSD.l1  Makefile.am  sex_01.clit  sex_02.clit  sex_03.clit  sex_04.clit  sex_05.clit  sex_06.clit  sex_07.clit  sex_08.clit
